test/Parse/isolated_any_forbidden.swift
// RUN: %target-typecheck-verify-swift 

typealias FnType = @isolated(any) () -> () // expected-error {{attribute requires '-enable-experimental-feature IsolatedAny'}}
